# fitnessTrackerCpp

./: .gitignore  CMakeLists.txt  FitnessTracker.cpp  FitnessTracker.h  README.md  logic.cpp  main.cpp
ui/: main_ui.cpp
